Refactored the Connection class so that all responses result in a Deposit_Receipt object and so can be handled in a simple fashion, regardless to what request it was.

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,23 @@ all_files  = 1
 
 [upload_sphinx]
 upload-dir = build/sphinx/html
+
+[epydoc] # Epydoc section marker
+
+# Information about the project.
+name: SWORD2 Python Client
+url: http://bitbucket.org/beno/python-sword2
+
+# The list of modules to document.  Modules can be named using
+# dotted names, module filenames, or package directory names.
+# This option may be repeated.
+modules: sword2
+
+# Write html output to the directory "apidocs"
+output: html
+target: apidocs/
+
+# Include all automatically generated graphs.  These graphs are
+# generated using Graphviz dot.
+graph: all
+dotpath: /usr/bin/dot
