--- a/sword2_logging.conf
+++ b/sword2_logging.conf
@@ -8,7 +8,7 @@ keys=consoleHandler
 keys=basicFormatting
 
 [logger_root]
-level=INFO
+level=DEBUG
 handlers=consoleHandler
 
 [handler_consoleHandler]
