various updates for 0.2.0 release to pypi

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,8 @@ upload-dir = build/sphinx/html
 [epydoc] # Epydoc section marker
 
 # Information about the project.
-name: SWORD2 Python Client
-url: http://bitbucket.org/beno/python-sword2
+name: SWORD v2 Python Client
+url: https://github.com/swordapp/python-client-sword2 
 
 # The list of modules to document.  Modules can be named using
 # dotted names, module filenames, or package directory names.
