--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py26
+envlist = py37, py38, py39
 [testenv]
 deps=httplib2
-     lxml==2.2
+     lxml
      nose
      web.py
 # Only run functional tests, until sss.py drops the lxml dep
