--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,10 @@ keywords=[ "sword-app", "atom", "sword2", "http" ]
 [tool.poetry.dependencies]
 python = ">=3.7"
 httplib2 = "^0.18.1"
+lxml = "^4.6.2"
 
 [tool.poetry.dev-dependencies]
+lxml-stubs = "^0.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
